Cluster refactoring